# cmake_project

./: CMakeLists.txt  main.cpp
projs/HeadSet_Measure_3D/: CMakeLists.txt
projs/HeadSet_Measure_3D/headers/: headset_measure_3d.h
projs/HeadSet_Measure_3D/sources/: begin_hsm3d.cpp  headset_measure_3d.cpp
projs/Tiny_Ply/: CMakeLists.txt
projs/ali_common/: CMakeLists.txt
projs/ali_common/headers/: ali_common.h  ali_common_3d.h
projs/ali_common/sources/: ali_common.cpp  ali_common_3d.cpp
projs/demura/: CMakeLists.txt
projs/demura/headers/: demura.h
projs/demura/sources/: assist_funcs.cpp  begin_demura.cpp  demura.cpp
src/: demura_test.cpp  hsm_3d_test.cpp  main.cpp  test_header.h  test_imgui_glfw_vulkan.cpp
